updated portfolio and navigation

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"-->
-      <a class="navbar-brand">Rehan Jay Manickam</a>
+      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">REHAN JAY MANICKAM</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse" id="navbarResponsive" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px"  >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#page-top">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">References</a>
+            <a class="nav-link js-scroll-trigger" href="#signup">REFERENCES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -73,7 +73,7 @@
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-3 spfont">REHAN JAY<br> MANICKAM</h1>
+        <h1 class="display-3 spfont">REHAN JAY <br> MANICKAM</h1>
         <h4 class="lead mb-0">Pianist. Producer. Engineer.</h4>
         <h4 class="lead mb-0">Marketing Strategist. Brand Manager.<h4">
       </div>
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white display-5"  style="padding-top: 50px;">ABOUT ME</h2>
+          <h2 class="text-white display-5"  style="padding-top: 30px;">ABOUT ME</h2>
                     <p style="padding-bottom: 50px;"></p>
           <p class="text-white mb-6">I am currently a second year undergraduate student at Berklee College of Music dual majoring in Music Production and Engineering & Music Business Management.</p>
 
@@ -99,7 +99,7 @@
           
       </div>
       <div class="col-md-10 mx-auto">
-        <p style="padding-bottom: 175px;"></p>
+        <p style="padding-bottom: 200px;"></p>
         <h2 class="text-white mb-0">"STRIVE NOT TO BE A SUCCESS, BUT TO BE OF VALUE."</h2>
         <p class="text-white mb-0">Albert Einstein</p>
       </div>
@@ -112,121 +112,163 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/MPTI2.jpg" title="MPTI: Set-Up/Teardown, Session Set Up, Mixing / Recording Assistant, Develop, enhance and hone in on production and recording skills, over 60+ hours logged, only undergraduate student at Berklee Valencia to have achieved this, Project.">
+          <a class="portfolio-box" href="img/portfolio/fullsize/MPTI2.jpg" title="MPTI Assisting Recording Engineer, Fall 2018 / Spring 2019, Berklee Valencia, Set-Up/Teardown, Session Set Up, Mixing / Recording Assist, Develop, enhance and hone in on production and recording skills, over 60+ hours logged, only undergraduate student at Berklee Valencia to have achieved this, Project.">
             <img class="img-fluid" src="img/portfolio/thumbnails/MPTI2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                MPTI Assisting Recording Engineer
+              MPTI Assisting Recording Engineer
               </div>
               <div class="project-name">
-                Fall 2018 / Spring 2019
+              Fall 2018 / Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Ambass.jpeg" title="Exchange Ambassador Program: Assist Student Affairs with orientation for incoming students and students moving on to Boston: coordinate mentorship with academic ambassador program in Boston for First Year students, Project.">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Ambass.jpeg" title="Exchange Ambassador Program, Fall 2018 / Spring 2019, Berklee Valencia, Program Lead, assist Student affairs with orientation for incoming students and students moving on to Boston: coordinate mentorship with academic ambassador program in Boston for First Year students, Project.">
             <img class="img-fluid" src="img/portfolio/thumbnails/Ambass.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Exchange Ambassador Program
+              Exchange Ambassador Program
               </div>
               <div class="project-name">
-                Fall 2018 / Spring 2019
+              Fall 2018 / Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/VeleseVents.jpeg" title="Veles e Vents: Keys / Piano player for Middle Eastern / Flamenco Ensemble, Mixed Styles and Grooves, Contemporary Instrumental Gospel Ensemble, showcase skills and develop live performance skills in front of 200 people from the community, gig. 
-">
+          <a class="portfolio-box" href="img/portfolio/fullsize/VeleseVents.jpeg" title="Performances by Valencia Marina, Fall 2018 and Spring 2019,Veles e Vents, External, Keys / Piano player for Middle Eastern / Flamenco Ensemble, Mixed Styles and Grooves, Contemporary Instrumental Gospel Ensemble, showcase skills and develop live performance skills in front of 200 people from the community, gig.">
             <img class="img-fluid" src="img/portfolio/thumbnails/VeleseVents.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Veles e Vents
+              Veles e Vents
               </div>
               <div class="project-name">
-                Fall 2018 and Spring 2019
+              Fall 2018 / Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="Bridging the Gap: Project Co-Lead, free and open platforms for students of various backgrounds to acquire studio skills, universal industry terminology and opportunities to network with the working professionals in the music industry, project. 
-">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="Bridging the Gap, Spring 2019, Berklee Valencia, Project Co-Lead, free and open platforms for students of various backgrounds to acquire studio skills, universal industry terminology and opportunities to network with the working professionals in the music industry, project.">
             <img class="img-fluid" src="img/portfolio/thumbnails/Bridgingthegap.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Bridging the Gap
+              Bridging the Gap
               </div>
               <div class="project-name">
-                Berklee Valencia
+              Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/gospelensemble.jpeg" title="Musaico Festival: External, Keys for Contemporary Instrumental Gospel Ensemble, develop skills for live performances and showcase these skills in front of 5000 people at a Berklee’ hosted and run festival, gig.">
+          <a class="portfolio-box" href="img/portfolio/fullsize/gospelensemble.jpeg" title="Performances at Musaico Festival, Spring 2019, Ciudad de les arts y sciences, External, Keys for Contemporary Instrumental Gospel Ensemble, develop skills for live performances and showcase these skills in front of 5000 people at a Berklee’ hosted and run festival, gig.">
             <img class="img-fluid" src="img/portfolio/thumbnails/gospelensemble.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Musaico Festival
               </div>
               <div class="project-name">
-                Spring 2019
+              Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/madrid.jpg" title="Industry Day Trip: External, Student candidate, interact with companies such as Live Nation, Universal Spain to understand how the industry works in Europe, project candidate. Selection based on academic merit with the International Career Centre. ">
+          <a class="portfolio-box" href="img/portfolio/fullsize/madrid.jpg" title="Candidate at Intl. Industry Day Trip Valencia (Fall 2018) & Madrid (Spring 2019), External, Student candidate, interact with companies such as Live Nation, Universal Spain to understand how the industry works in Europe, project candidate. Selection based on academic merit with the International Career Centre. ">
             <img class="img-fluid" src="img/portfolio/thumbnails/madrid.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Industry Day Trip
               </div>
               <div class="project-name">
-                Valencia (Fall 2018) & Madrid (Spring 2019)
+              Valencia (Fall 2018) / Madrid (Spring 2019)
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/BerkleeBlog.png" title="Blog for Berklee, Spring 2019, Berklee Valencia, Writer, share my experience as a student here in Valencia reflecting on resources, opportunities and co-curricular live, project.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BerkleeBlog.png" title="Blog for Berklee, Spring 2019, Berklee Valencia, Writer, share my experience as a student here in Valencia reflecting on resources, opportunities and co-curricular live, project. ">
+              <img class="img-fluid" src="img/portfolio/thumbnails/BerkleeBlog.png" alt="">
+              <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Berkelee Blog
+              </div>
+              <div class="project-name">
+              Spring 2019
+              </div>
+            </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/BostonCalling.png" title="Volunteer at Boston Calling, Summer 2019, Boston Calling Festival, External, Assist Production Teams, learn the workings of a live music festival inside out from operations to ticketing to marketing to riders to production with Live Nation, festival volunteer.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BostonCalling.png" title="Volunteer at Boston Calling, Summer 2019, Boston Calling Festival, External, Assist Production Teams, learn the workings of a live music festival inside out from operations to ticketing to marketing to riders to production with Live Nation, festival volunteer. ">
+              <img class="img-fluid" src="img/portfolio/thumbnails/BostonCalling.png" alt="">
+              <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Volunteer at Boston Calling
+              </div>
+              <div class="project-name">
+              Summer 2019
+              </div>
+            </div>
             </a>
           </div>
-          </a>
-        </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/BVCEL.jpg" title="BVCEL Certification, Fall 2018, Berklee Valencia, Law and Management Valencia Board President, Educate, encourage and inspire undergrads and masters students about the Music Business and Legal aspects.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            </a>
-          </div>
+            <a class="portfolio-box" href="img/portfolio/fullsize/BVCEL.jpg" title="BVCEL Certification, Fall 2018, Berklee Valencia, Law and Management Valencia Board President, Educate, encourage and inspire undergrads and masters students about the Music Business and Legal aspects - #WomenInLaw chapter to empower and advocate for women in the industry related to the music business, award.">
+              <img class="img-fluid" src="img/portfolio/thumbnails/BVCEL.jpg" alt="">
+              <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                BVCEL Certification
+              </div>
+              <div class="project-name">
+              Fall 2018
+              </div>
+            </div>
+          </a>
+            </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/DeansList.png" title="Deans List, Fall 2017 Spring 2018 Fall 2018, Berklee Boston & Berklee Valencia, Student, Maintain excellent academic standing with balanced co-curricular endeavors, award.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/DeansList.png" alt="">
+              <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Deans List
+              </div>
+              <div class="project-name">
+              Fall 2017, Spring 2018, & Fall 2018
+              </div>
+            </div>
             </a>
           </div>
-          </a>
-        </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/LawandManagement.jpg" title="BVCEL: #WomenInLaw chapter to empower and advocate for women in the industry related to the music business, award.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/LawandManagement.jpg" title="BVCEL Certification, Fall 2018, Berklee Valencia, Law and Management Valencia Board President, Educate, encourage and inspire undergrads and masters students about the Music Business and Legal aspects - #WomenInLaw chapter to empower and advocate for women in the industry related to the music business, award.">
+              <img class="img-fluid" src="img/portfolio/thumbnails/LawandManagement.jpg" alt="">
+              <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+              WomenInLaw
+              </div>
+              <div class="project-name">
+              Fall 2018
+              </div>
+            </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/StudentAdvisoryBoard.png" title="Student Advisory Board, Fall 2018 / Spring 2019 <br> Study Abroad Representative, Address on campus issues regarding academics, extracurriculars and issues of diversity, equity and inclusion, Student Board.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            </a>
-          </div>
+              <img class="img-fluid" src="img/portfolio/thumbnails/StudentAdvisoryBoard.png" alt="">
+              <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Student Advisory Board
+              </div>
+              <div class="project-name">
+               Fall 2018 / Spring 2019
+              </div>
+            </div>
           </a>
         </div>
+        </div>
+    </div>
   </section>
 
 <section id="portfolio2">
@@ -234,7 +276,7 @@
     <div class="container-fluid p-0">
       <div class="row justify-content-center no-gutters">
         <div class="col-4">
-          <a class="portfolio-box popup-youtube" href="https://www.youtube.com/watch?v=5m5vRz4gfYA" title="title2">
+          <a class="portfolio-box popup-youtube" href="https://www.youtube.com/watch?v=5m5vRz4gfYA" title="Performances by Valencia Marina, Fall 2018 and Spring 2019,Veles e Vents, External, Keys / Piano player for Middle Eastern / Flamenco Ensemble, Mixed Styles and Grooves, Contemporary Instrumental Gospel Ensemble, showcase skills and develop live performance skills in front of 200 people from the community, gig. ">
               <img class="img-fluid" src="img/portfolio/thumbnails/performance1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
@@ -247,7 +289,7 @@
             </a>
         </div>
         <div class="col-4">
-          <a class="portfolio-box popup-youtube" href="https://www.youtube.com/watch?v=QDxI1L-Y8-Q" title="title2">
+          <a class="portfolio-box popup-youtube" href="https://www.youtube.com/watch?v=QDxI1L-Y8-Q" title="Performances by Valencia Marina, Fall 2018 and Spring 2019,Veles e Vents, External, Keys / Piano player for Middle Eastern / Flamenco Ensemble, Mixed Styles and Grooves, Contemporary Instrumental Gospel Ensemble, showcase skills and develop live performance skills in front of 200 people from the community, gig. ">
               <img class="img-fluid" src="img/portfolio/thumbnails/performance2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
@@ -260,12 +302,11 @@
             </a>
           </div>
       </div>
-      <p style="padding-bottom: 20px;"></p>
+      <p style="padding-bottom: 45px"></p>
 </section>
 
 <!-- Reference Section -->
 <section id="signup" class="signup-section bg-black">
-  <div class="container" style="padding-top: : 20px">
   <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-bottom: 150px;">REFERENCES</h2>
   <div class="col-lg-8 mx-auto">
     <div class="row">
@@ -319,6 +360,7 @@
       </div>
     </div>
   </div>
+  <p style="padding-bottom: 30px"> </p>
 </section> 
 
 <!-- Contact Section -->
