update before contact portion

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="form.css" >
   <!-- Theme CSS - Includes Bootstrap -->
   <!-- Custom styles -->
   <link href="css/grayscale.min.css" rel="stylesheet">
@@ -37,7 +37,8 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"-->
-      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">REHAN JAY MANICKAM</a>
+      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">
+      REHAN JAY MANICKAM</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -59,6 +60,21 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
           </li>
+          <li>
+            <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
+              <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem; padding-left: 1.5rem"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/rehanjaym" class="mx-2" target="_blank">
+              <i class="nav-link js-scroll-trigger fab fa-facebook-square" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
+            </a>
+          </li>
+          <li>  
+            <a href="http://linkedin.com/in/rehanjaym/" class="mx-2" target="_blank">
+              <i class="nav-link js-scroll-trigger fab fa-linkedin-in" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -73,9 +89,9 @@
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-3 spfont">REHAN JAY <br> MANICKAM</h1>
-        <h4 class="lead mb-0">Pianist. Producer. Engineer.</h4>
-        <h4 class="lead mb-0">Marketing Strategist. Brand Manager.<h4">
+        <h1 class="display-3 spfont">REHAN JAY MANICKAM</h1>
+        <h4 class="lead mb-0" style="font-size: 2rem;">Pianist. Producer. Engineer.</h4>
+        <h4 class="lead mb-0" style="font-size: 2rem">Marketing Strategist. Brand Manager.<h4">
       </div>
     </div>
   </div>
@@ -310,6 +326,7 @@
 <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
       <div class="social d-flex justify-content-center">
+            
         <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
@@ -346,7 +363,7 @@
   <!-- Plugin JavaScript -->
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  
+  <script src="form.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
