updateruu added form without rehans email

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"-->
-      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">
+      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 300; font-size: 14px">
       REHAN JAY MANICKAM</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px"  >
+      <div class="collapse navbar-collapse" id="navbarResponsive" style="font-family: 'Montserrat'; font-weight: 300; font-size: 14px"  >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#page-top">HOME</a>
@@ -103,7 +103,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white display-5"  style="padding-top: 20px;">ABOUT ME</h2>
-                    <p style="padding-bottom: 0px; font-size: "></p>
+                    <p style="padding-bottom: 0px;"></p>
           <p class="text-white lead mb-6">Rehan Manickam is a second year undergraduate student at Berklee dual majoring in music production and engineering and music business/management. With a focus on fostering a sense of community among artists in the industry and revolutionizing aspects of the performing arts, his experiences, projects, and involvement within the community are at the core of his vision and mission here at Berklee. Rehan is involved with multiple organizations on and off campus. Namely, SOFAR Sounds, AES, TEDx, Boston Calling and many more. His commitment to his work, peers and community at Berklee is demonstrated through his endeavors with Student Government, the Ambassador program and other platforms within the college.</p>
 
           <p class="text-white lead mb-6"></p>
@@ -324,9 +324,43 @@
 
 
 <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-black justify-content-center">
+              <div class="container-fluid p-0">
+                <div class="row justify-content-center no-gutters">
+                  <div class="col-4" style="color:white;">
+                    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px">Contact Me</h2> 
+                    <p> Please send your message below.</p>
+                    <form role="form" method="post" id="reused_form">
+                        <div class="row">
+                            <div class="col-sm-12 form-group">
+                                <label for="message"> Message:</label>
+                                <textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6 form-group">
+                                <label for="name"> Your Name:</label>
+                                <input type="text" class="form-control" id="name" name="name" required>
+                            </div>
+                            <div class="col-sm-6 form-group">
+                                <label for="email"> Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 form-group">
+                                <button type="submit" class="btn btn-lg btn-default pull-right" style="color: white">Send &rarr;</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
+                    <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+                </div>
+            </div>
+        </div>
       <div class="social d-flex justify-content-center">
             
+          </form>
         <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
