--- a/references.html
+++ b/references.html
@@ -59,13 +59,29 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#contact">CONTACT</a>
           </li>
+          <li>
+            <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
+              <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem; padding-left: 1.5rem"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/rehanjaym" class="mx-2" target="_blank">
+              <i class="nav-link js-scroll-trigger fab fa-facebook-square" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
+            </a>
+          </li>
+          <li>  
+            <a href="http://linkedin.com/in/rehanjaym/" class="mx-2" target="_blank">
+              <i class="nav-link js-scroll-trigger fab fa-linkedin-in" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
 <!-- Reference Section -->
-<section id="signup" class="signup-section bg-black">
+
+<section id="signup" class="signup-section">
   <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-bottom: 150px;">REFERENCES</h2>
   <div class="col-lg-8 mx-auto">
     <div class="row">
