update with alignment and backdrop

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
     <source src="img/Turntable.mp4" type="video/mp4">
   </video>
-  <div class="container h-100">
+  </header>
+
+  <section id="masthead" class="about-section2">
+      <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
         <h1 class="display-3 spfont">REHAN JAY MANICKAM</h1>
@@ -95,13 +98,13 @@
       </div>
     </div>
   </div>
-  </header>
+  </section>
 
     <!-- About Section -->
-  <section id="about" class="about-section text-center">
+  <section id="about" class="about-section text-center" style="align-content: left; align-self: left">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-82 mx-auto2">
           <h2 class="text-white display-5"  style="padding-top: 20px;">ABOUT ME</h2>
                     <p style="padding-bottom: 0px;"></p>
           <p class="text-white lead mb-6">Rehan Manickam is a second year undergraduate student at Berklee dual majoring in music production and engineering and music business/management. With a focus on fostering a sense of community among artists in the industry and revolutionizing aspects of the performing arts, his experiences, projects, and involvement within the community are at the core of his vision and mission here at Berklee. Rehan is involved with multiple organizations on and off campus. Namely, SOFAR Sounds, AES, TEDx, Boston Calling and many more. His commitment to his work, peers and community at Berklee is demonstrated through his endeavors with Student Government, the Ambassador program and other platforms within the college.</p>
