--- a/references.html
+++ b/references.html
@@ -80,9 +80,15 @@
   </nav>
 
 <!-- Reference Section -->
+<header header class="masthead">
+  <div class="overlay"></div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="img/Turntable.mp4" type="video/mp4">
+  </video>
+</header>
 
 <section id="signup" class="signup-section">
-  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-bottom: 150px;">REFERENCES</h2>
+  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-top: 100px; padding-bottom: 100px;">REFERENCES</h2>
   <div class="col-lg-8 mx-auto">
     <div class="row">
         <div class="col-md-3 text-center">
