--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
   </section>
 
     <!-- About Section -->
-  <section id="about" class="about-section text-center" style="align-content: left; align-self: left">
+  <section id="about" class="about-section text-center">
     <div class="container">
       <div class="row">
-        <div class="col-lg-82 mx-auto2">
+        <div class="col-lg-82 mx-auto">
           <h2 class="text-white display-5"  style="padding-top: 20px;">ABOUT ME</h2>
                     <p style="padding-bottom: 0px;"></p>
-          <p class="text-white lead mb-6">Rehan Manickam is a second year undergraduate student at Berklee dual majoring in music production and engineering and music business/management. With a focus on fostering a sense of community among artists in the industry and revolutionizing aspects of the performing arts, his experiences, projects, and involvement within the community are at the core of his vision and mission here at Berklee. Rehan is involved with multiple organizations on and off campus. Namely, SOFAR Sounds, AES, TEDx, Boston Calling and many more. His commitment to his work, peers and community at Berklee is demonstrated through his endeavors with Student Government, the Ambassador program and other platforms within the college.</p>
+          <p class="text-white lead mb-6" style="text-align: left; padding-right: 500px">Rehan Manickam is a second year undergraduate student at Berklee dual majoring in music production and engineering and music business/management. With a focus on fostering a sense of community among artists in the industry and revolutionizing aspects of the performing arts, his experiences, projects, and involvement within the community are at the core of his vision and mission here at Berklee. Rehan is involved with multiple organizations on and off campus. Namely, SOFAR Sounds, AES, TEDx, Boston Calling and many more. His commitment to his work, peers and community at Berklee is demonstrated through his endeavors with Student Government, the Ambassador program and other platforms within the college.</p>
 
-          <p class="text-white lead mb-6"></p>
+          <p class="text-white lead mb-6"><br></p>
 
-          <p class="text-white lead mb-7"> His work experience consist of digital marketing, artist management, festival planning, data analytics, business innovation,  audio engineering, mixing, live sound and much more. His collaborative work with multiple musicians and professionals in Toronto, Boston, Dubai and Valencia have resulted in a respected rapport being formed amongst his professional network. An analytical strategist, fast learner and perseverant mentor, Rehan brings a lot to a team of professionals whilst simultaneously growing and developing his core skills. A committed academic, Rehan has been a Dean’s List recipient since the inception of his college career at Berklee. With multiple recommendations throughout his academic course, Rehan has a well-established and respected rapport amongst staff, faculty, students and alumni. Currently pursuing a course at Harvard Law  he has ambitions of transforming the legal aspects of the industry in order to promote and innovative and enriching environment amongst creators within the performing arts. </p>
+          <p class="text-white lead mb-7" style="text-align: right; padding-left: 500px"> His work experience consist of digital marketing, artist management, festival planning, data analytics, business innovation,  audio engineering, mixing, live sound and much more. His collaborative work with multiple musicians and professionals in Toronto, Boston, Dubai and Valencia have resulted in a respected rapport being formed amongst his professional network. An analytical strategist, fast learner and perseverant mentor, Rehan brings a lot to a team of professionals whilst simultaneously growing and developing his core skills. A committed academic, Rehan has been a Dean’s List recipient since the inception of his college career at Berklee. With multiple recommendations throughout his academic course, Rehan has a well-established and respected rapport amongst staff, faculty, students and alumni. Currently pursuing a course at Harvard Law  he has ambitions of transforming the legal aspects of the industry in order to promote and innovative and enriching environment amongst creators within the performing arts. </p>
 
           <p class="text-white lead mb-7">Rehan is committed to his vision with a driven passion from conception to completion, and considers it the foundation of his successes but also the motivation behind his failures.</p>
           <p style="padding-bottom: 1px"></p>
@@ -124,11 +124,12 @@
         <p style="padding-bottom: 40px"></p>
       </div>
     </div>
+  </div>
   </section>
 
 <!-- Portfolio Section -->
   <section id="portfolio">
-    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">MY PORTFOLIO</h2>
+    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px; position: relative;">MY PORTFOLIO</h2>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
@@ -292,7 +293,7 @@
   </section>
 
 <section id="portfolio2">
-    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">Videos</h2>
+    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px; position: relative;">Videos</h2>
     <div class="container-fluid p-0">
       <div class="row justify-content-center no-gutters">
         <div class="col-4">
@@ -322,7 +323,7 @@
             </a>
           </div>
       </div>
-      <p style="padding-bottom: 45px"></p>
+      <p style="padding-bottom: 174px"></p>
 </section>
 
 
@@ -331,7 +332,7 @@
               <div class="container-fluid p-0">
                 <div class="row justify-content-center no-gutters">
                   <div class="col-4" style="color:white;">
-                    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px">Contact Me</h2> 
+                    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px; position: relative;">Contact Me</h2> 
                     <p> Please send your message below.</p>
                     <form role="form" method="post" id="reused_form">
                         <div class="row">
@@ -361,7 +362,7 @@
                 </div>
             </div>
         </div>
-      <div class="social d-flex justify-content-center">
+      <div class="social d-flex justify-content-center" style="position: relative;">
             
           </form>
         <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
@@ -377,7 +378,7 @@
   </section> 
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50" style="padding-top: 5px; padding-bottom: 5px">
+  <footer class="bg-black small text-center text-white-50" style="padding-top: 5px; padding-bottom: 5px; position: relative;">
     <div class="container">
       Copyright &copy; Rehan Manickam 2019
     </div>
