--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" target="_blank">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -55,10 +55,10 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="references.html#signup">REFERENCES</a>
+            <a class="nav-link js-scroll-trigger" href="references.html">REFERENCES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
+            <a class="nav-link js-scroll-trigger" href="#contact" >CONTACT</a>
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
@@ -328,7 +328,7 @@
 
 
 <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black justify-content-center">
+  <section id="contact" class="contact-section bg-black justify-content-center" >
               <div class="container-fluid p-0">
                 <div class="row justify-content-center no-gutters">
                   <div class="col-4" style="color:white;">
