Website complete, urls not mapped using php.

--- a/references.html
+++ b/references.html
@@ -45,7 +45,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px"  >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#page-top">HOME</a>
+            <a class="nav-link js-scroll-trigger" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#about">ABOUT</a>
@@ -54,7 +54,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html#portfolio">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">REFERENCES</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#signup">REFERENCES</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#contact">CONTACT</a>
