final update rehan manickam

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="references.html">REFERENCES</a>
+            <a class="nav-link js-scroll-trigger" href="#contact" >CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact" >CONTACT</a>
+            <a class="nav-link js-scroll-trigger" href="references.html" style=" padding-right: 1.5rem">REFERENCES</a>
+          </li>
+          <li>
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
-              <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem; padding-left: 1.5rem"></i>
+              <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
             </a>
           </li>
           <li>
