--- a/references.html
+++ b/references.html
@@ -54,10 +54,10 @@
             <a class="nav-link js-scroll-trigger" href="index.html#portfolio">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#signup">REFERENCES</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">CONTACT</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#signup" style=" padding-right: 1.5rem">REFERENCES</a>
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
