--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body id="page-top" target="_blank">
+<body id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -59,8 +59,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="references.html" style=" padding-right: 1.5rem">REFERENCES</a>
-          </li>
-          <li>
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
@@ -330,7 +328,7 @@
 
 
 <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black justify-content-center" >
+  <section id="contact" class="contact-section justify-content-center" >
               <div class="container-fluid p-0">
                 <div class="row justify-content-center no-gutters">
                   <div class="col-4" style="color:white;">
