--- a/references.html
+++ b/references.html
@@ -61,7 +61,7 @@
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
-              <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem; padding-left: 1.5rem"></i>
+              <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
             </a>
           </li>
           <li>
