--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
             <a class="nav-link js-scroll-trigger" href="#contact" >CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="references.html" style=" padding-right: 1.5rem">REFERENCES</a>
+            <a class="nav-link js-scroll-trigger" href="references.html">REFERENCES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="img/pdf/RESUME.pdf" download target="_blank" style=" padding-right: 1.5rem">RESUME</a>
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
