--- a/references.html
+++ b/references.html
@@ -75,7 +75,10 @@
             <a class="nav-link js-scroll-trigger" href="index.html#contact">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#signup" style=" padding-right: 1.5rem">REFERENCES</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#signup">REFERENCES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="img/pdf/RESUME.pdf" download target="_blank" style=" padding-right: 1.5rem">RESUME</a>
           </li>
           <li>
             <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
